--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,47 @@
 /*Background color of navbar, use #4caf50 for a green color, #0089ec for blue*/
 .nav-wrapper{
-	background-color: #1d1f21; 
+	background-color: #2196f3; 
 }
 
 /*Font size of navbar links*/
 nav ul a {
 	font-size: 17px;
+	text-transform: uppercase;
 }
 
 /*Color of active page link*/
 nav ul li.active {
-    background-color: #0089ec;
+    background-color: #00bcd4;
+
 }
 
-/*Background color of page*/
-body {
-	background-color: #000;
+body{
+	background: linear-gradient(189deg, #ffab00, #0081ff, #d71a1a, #3abd67);
+	background-size: 800% 800%;
+
+	-webkit-animation: AnimationName 32s ease infinite;
+	-moz-animation: AnimationName 32s ease infinite;
+	animation: AnimationName 32s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 57%}
+    50%{background-position:100% 44%}
+    100%{background-position:0% 57%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 57%}
+    50%{background-position:100% 44%}
+    100%{background-position:0% 57%}
+}
+@keyframes AnimationName { 
+    0%{background-position:0% 57%}
+    50%{background-position:100% 44%}
+    100%{background-position:0% 57%}
+}
+
+.progress {
+	margin: 0;
 }
 /*Position of logo*/
 .logo {
