--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,16 @@ body.cool{
 	background: url('../images/logo.png') 50% 50% no-repeat;
 }
 
+.rlogo {
+	animation: logo 4s ease infinite;
+}
+
+@keyframes logo{
+	0%{filter: blur(0px);}
+	50% {filter: blur(2px);}
+	100% {filter: blur(0px);}
+}
+
 .revamp-logo {
 	margin: auto;
 	width: 300px;
@@ -93,4 +103,30 @@ h2{
 	.modal {
 	    width: 95%;
 	}
+}
+
+.page-footer {
+	background-color: transparent !important;
+}
+
+.anuj {
+	display: inline-block;
+	float: right;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
