--- a/css/style.css
+++ b/css/style.css
@@ -230,4 +230,6 @@ video#bgvid {
 
 footer.page-footer .footer-copyright{
 	background-color: rgba(51, 51, 51, 0.68);
+  height: auto !important;
 }
+
